--- a/components/common/Button.module.scss
+++ b/components/common/Button.module.scss
@@ -1,7 +1,7 @@
 .primary {
   @apply text-gray-900;
 
-  background: linear-gradient(90deg, #2193b0 0%, #6dd5ed 50%, #2193b0 100%),
+  background: linear-gradient(90deg, #6366f1 0%, #6dd5ed 50%, #a855f7 100%),
     linear-gradient(0deg, #ffffff, #ffffff);
   background-size: 200% 100%;
 
