--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -197,7 +197,7 @@ a {
 }
 
 .text-gradient {
-  background: linear-gradient(90deg, #6dd5ed 0%, #2193b0 100%);
+  background: linear-gradient(90deg, #6366f1 0%, #a855f7 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
